--- a/main.html
+++ b/main.html
@@ -1,16 +1,91 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8" />
+  <title>Semantic Navbar and Videos</title>
+  <style>
+    nav {
+      background-color: #2c3e50;
+      padding: 10px 20px;
+    }
 
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li {
+      display: inline;
+    }
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1.1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    h2 {
+      margin-top: 30px;
+      font-family: Arial, sans-serif;
+      color: #34495e;
+    }
+
+    .video-container {
+      display: flex;
+      gap: 20px;
+      padding: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    video {
+      width: 320px;
+      height: 180px;
+      border: 2px solid #bdc3c7;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Semantic Navbar -->
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about-us">About us</a></li>
+      <li><a href="#contact-us">Contact us</a></li>
+    </ul>
+  </nav>
+
+  <!-- Heading for videos -->
+  <h2>3 random videos</h2>
+
+  <!-- Videos section -->
+  <div class="video-container">
+    <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+
+    <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+  </div>
 
 </body>
-
 </html>
